doc: removed non existing features into a new section of Readme