@@ -76,7 +76,6 @@ graalvmNative {
         main {
             imageName = 'sc'
             buildArgs.add('--verbose')
-            buildArgs.add('--enable-native-access=ALL-UNNAMED')
         }
     }
     metadataRepository {
